--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -83,6 +83,18 @@ h3 {
   }
 }
 
+h4 {
+  font-size: 1.5rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 1rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    font-size: 0.8rem;
+  }
+}
+
 p {
   margin-top: 1.2rem;
   color: $color-primary-dark;
