--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -87,6 +87,15 @@
       font-size: 0.8rem;
     }
   }
+
+  @media only screen and (max-width: $bp-smallest) {
+    &__title {
+      font-size: 0.8rem;
+    }
+    &__subtitle {
+      font-size: 0.8rem;
+    }
+  }
 }
 @keyframes moveInRight {
   0% {
